# eerie-expendable

./: .gitignore  README.md
client/: README.md  tsconfig.json
client/assets/scripts/camera/: ThirdPersonCamera.ts
client/assets/scripts/combat/: BulletPool.ts  CoverSystem.ts  EnemyAI.ts  Health.ts  PlayerMotor.ts  WeaponController.ts
client/assets/scripts/core/: BootStrap.ts  EventBus.ts  ObjectPool.ts
client/assets/scripts/horror/: HorrorEncounter.ts
client/assets/scripts/level/: ForestFogSetup.ts  Level01Director.ts  LevelStateMachine.ts  SniperDirector.ts
client/web-preview/: arena.html  index.html  package.json  styles.css
client/web-preview/audio/: CREDITS.txt
client/web-preview/src/: AudioDirector.js  CharacterFactory.js  Collision.js  Combat.js  Cover.js  Enemy.js  ForestEnvironment.js  Horror.js  Hud.js  LevelState.js  ObjectPool.js  Player.js  Radio.js  SaveService.js  Sniper.js  arena.js  main.js
client/web-preview/tests/: collision.test.js  horror.test.js  manual-checklist.js
docs/: 开发计划.md  阶段0-验收说明.md  阶段1-验收说明.md  阶段2-验收说明.md  阶段3-验收说明.md  阶段4-验收说明.md
server/: .env.example  README.md  pyproject.toml
server/app/: main.py
server/app/api/v1/: auth.py  config.py  progress.py  router.py  saves.py  tts.py
server/app/core/: config.py  deps.py  security.py
server/app/db/: base.py  session.py
server/app/models/: __init__.py  save.py  user.py
server/app/schemas/: __init__.py
server/app/services/: auth.py  saves.py
server/scripts/: smoke_tts.py
server/tests/: conftest.py  test_health.py  test_phase3.py
(+8 files in other folders)
